versioned_docs/version-0.16/reference/miden-vm/usage.md
---
title: "Usage"
sidebar_position: 3
---

# Usage

Before you can use Miden VM, you'll need to make sure you have Rust [installed](https://www.rust-lang.org/tools/install). Miden VM v0.19 requires Rust version **1.96** or later.

Miden VM consists of several crates, each of which exposes a small set of functionality. The most notable of these crates are:

- [miden-processor](https://crates.io/crates/miden-processor), which can be used to execute Miden VM programs.
- [miden-prover](https://crates.io/crates/miden-prover), which can be used to execute Miden VM programs and generate proofs of their execution.
- [miden-verifier](https://crates.io/crates/miden-verifier), which can be used to verify proofs of program execution generated by Miden VM prover.

The above functionality is also exposed via the single [miden-vm](https://crates.io/crates/miden-vm) crate, which also provides a CLI interface for interacting with Miden VM.

## CLI interface

### Compiling Miden VM

To compile Miden VM into a binary, we have a [Makefile](https://www.gnu.org/software/make/manual/make.html) with the following tasks:

```shell
make exec
```

This will place an optimized, multi-threaded `miden-vm` executable into the `./target/optimized` directory. It is equivalent to executing:

```shell
cargo build --profile optimized --features concurrent,executable
```

If you would like to enable single-threaded mode, you can compile Miden VM using the following command:

```shell
make exec-single
```

### Controlling parallelism

Internally, Miden VM uses [rayon](https://github.com/rayon-rs/rayon) for parallel computations. To control the number of threads used to generate a STARK proof, you can use `RAYON_NUM_THREADS` environment variable.

### SIMD acceleration

Miden VM execution and proof generation can be accelerated via vectorized instructions. Currently, SIMD acceleration can be enabled on platforms supporting [SVE](<https://en.wikipedia.org/wiki/AArch64#Scalable_Vector_Extension_(SVE)>) and [AVX2](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions#Advanced_Vector_Extensions_2) instructions.

To compile Miden VM with AVX2 acceleration enabled, you can run the following command:

```shell
make exec-avx2
```

To compile Miden VM with SVE acceleration enabled, you can run the following command:

```shell
make exec-sve
```

This will place the resulting `miden-vm` executable into the `./target/optimized` directory.

SVE/AVX2 acceleration is currently applicable only to recursive proofs which can be generated using the `-r` flag.

### Running Miden VM

Once the executable has been compiled, you can run Miden VM like so:

```shell
./target/optimized/miden-vm [subcommand] [parameters]
```

Currently, Miden VM can be executed with the following subcommands:

- `run` - this will execute a Miden assembly program and output the result, but will not generate a proof of execution.
- `prove` - this will execute a Miden assembly program, and will also generate a STARK proof of execution.
- `verify` - this will verify a previously generated proof of execution for a given program.
- `compile` - this will compile a Miden assembly program (i.e., build a program [MAST](./design/programs.md)) and outputs stats about the compilation process.
- `example` - this will execute a Miden assembly example program, generate a STARK proof of execution and verify it. Currently, it is possible to run `blake3` and `fibonacci` examples.

All of the above subcommands require various parameters to be provided. To get more detailed help on what is needed for a given subcommand, you can run the following:

```shell
./target/optimized/miden-vm [subcommand] --help
```

For example:

```shell
./target/optimized/miden-vm prove --help
```

To execute a program using the Miden VM there needs to be a `.masm` file containing the Miden Assembly code and a `.inputs` file containing the inputs.

#### Enabling logging

You can use `MIDEN_LOG` environment variable to control how much logging output the VM produces. For example:

```shell
MIDEN_LOG=trace ./target/optimized/miden-vm [subcommand] [parameters]
```

If the level is not specified, `warn` level is set as default.

#### Debugging procedures

You can inspect VM state by importing the [`miden::core::debug`](./user_docs/assembly/debugging.md) module and calling its print procedures from a MASM program.

```shell
./target/optimized/miden-vm run [path_to.masm]
```

If trace building would exceed the VM trace row limit, `run` returns a trace length error instead of trying to build a larger trace.

### Inputs

As described [here](./overview.md#inputs-and-outputs) the Miden VM can consume public and secret inputs.

- Public inputs:
  - `operand_stack` - can be supplied to the VM to initialize the stack with the desired values before a program starts executing. If the number of provided input values is less than 16, the input stack will be padded with zeros to the length of 16. The maximum number of the stack inputs is limited by 16 values, providing more than 16 values will cause an error.
- Secret (or nondeterministic) inputs:
  - `advice_stack` - can be supplied to the VM. There is no limit on how much data the advice provider can hold. This is provided as a string array where each string entry represents a field element.
  - `advice_map` - is supplied as a map of 64-character hex keys, each mapped to an array of numbers. The hex keys are interpreted as 4 field elements and the arrays of numbers are interpreted as arrays of field elements.
  - `merkle_store` - the Merkle store is container that allows the user to define `merkle_tree`, `sparse_merkle_tree` and `partial_merkle_tree` data structures.
    - `merkle_tree` - is supplied as an array of 64-character hex values where each value represents a leaf (4 elements) in the tree.
    - `sparse_merkle_tree` - is supplied as an array of tuples of the form (number, 64-character hex string). The number represents the leaf index and the hex string represents the leaf value (4 elements).
    - `partial_merkle_tree` - is supplied as an array of tuples of the form ((number, number), 64-character hex string). The internal tuple represents the leaf depth and index at this depth, and the hex string represents the leaf value (4 elements).

_Check out the [comparison example](https://github.com/0xMiden/examples/blob/5eed317a36f89546046618f8426f5c702362f3c9/examples/comparison.masm) to see how secret inputs work._

After a program finishes executing, the elements that remain on the stack become the outputs of the program. Notice that the number of values on the operand stack at the end of the program execution can not be greater than 16, otherwise the program will return an error. The [`truncate_stack`](./user_docs/core_lib/sys.md) utility procedure from the core library could be used to conveniently truncate the stack at the end of the program.

## Fibonacci example

In the `miden-vm/masm-examples/fib` directory, we provide a very simple Fibonacci calculator example. This example computes the 1001st term of the Fibonacci sequence. You can execute this example on Miden VM like so:

```shell
./target/optimized/miden-vm run miden-vm/masm-examples/fib/fib.masm
```

### Capturing Output

This will run the example code to completion and will output the top element remaining on the stack.

If you want the output of the program in a file, you can use the `--output` or `-o` flag and specify the path to the output file. For example:

```shell
./target/optimized/miden-vm run miden-vm/masm-examples/fib/fib.masm -o fib.out
```

This will dump the output of the program into the `fib.out` file. The output file will contain the state of the stack at the end of the program execution.

### Running with `miden::core::debug` procedures

Inside `miden-vm/masm-examples/fib/fib.masm`, import the `miden::core::debug` module before `begin`, then call one of its procedures, such as `exec.debug::print_stack`, anywhere between `begin` and `end`:

```masm
use miden::core::debug

begin
    # ...
    exec.debug::print_stack
    # ...
end
```

Then run:

```shell
./target/optimized/miden-vm run miden-vm/masm-examples/fib/fib.masm
```

You should see output similar to "Stack state before step ..."
